[package]
name = "msc"
version = "0.1.0"
authors = ["EmmChriss <emmchris@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = "1.0"
serde_json = "1.0"
# TODO: crate is not ready
# youtube_dl = "0.4"
id3 = "0.4"
