[package]
name = "msc"
version = "0.1.0"
authors = ["EmmChriss <emmchris@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
# youtube_dl = "0.4"
id3 = "0.4"
regex = "1.3"
anyhow = "1.0" # idiomatic error-handling for prototyping
